# server/controllers/Project.js
@@ -1,24 +1,31 @@
 var url = require('url');
-var mongoose = require('mongoose');
-
-mongoose.connect('mongodb://127.0.0.1:27107/test');
-
-var projectSchema = new mongoose.Schema({
-  projectName:String,
-  projectKey:String
-});
+var db = require('../db/db.js');
 
 module.exports.getProjects = function (req, res, next) {
   var params = req.swagger.params;
 
-  var projectsModel = mongoose.model("projects", projectSchema);
-  var project = new projectsModel({ projectName: "项目1", projectKey: "Project1" });
+  db.projects.find({}, function (err, docs) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(docs, null, 2));
+  });
+};
 
-  project.save();
 
+module.exports.addProject = function (req, res, next) {
+  var model = req.swagger.params.body.value;
 
-  res.setHeader('Content-Type', 'application/json');
-  res.end(JSON.stringify({ userName: "hueidou", realName: null }, null, 2));
-  return;
+  db.projects.findOne({ projectKey: model.projectKey }, function (err, doc) {
+    if (!!doc) {
+      res.end();
+    }
+    else {
+      var project = new db.projects();
+      project.projectKey = model.projectKey;
+      project.projectName = model.projectName;
 
+      project.save(function (err) {
+        res.end();
+      });
+    }
+  });
 };
